[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-memory-agent"
version = "0.1.0"
description = "Constraint-aware RL agent for online memory optimization in distributed deep learning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.0",
]

[project.scripts]
rl-memory-agent = "rl_memory_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

